Fix: Overlapped by the left side bar
When displayed, the left sidebar covers part of the view.

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ li[data-id='emlviewer'] {
 }
 
 #app-sidebar.emlviewer {
-    position: fixed;
+    position: relative;
     width: 100%;
     max-width: none;
     left: 0;
